<resources>
    <string name="app_name">LDRP</string>
    <string name="Welcome">Welcome to Ridemate</string>
    <string name="User">User</string>
    <string name="Organization">Organization</string>
    <string name="Login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="whoami">I am a</string>
    <string name="Driver">Faculty</string>
    <string name="Rider">Student</string>
    <string name="DriverReg">Driver Register</string>
    <string name="RiderReg">Rider Register</string>
    <string name="VehicleReg">Register Vehicle</string>
    <string name="next">Next</string>
    <string name="Name">Enter Name</string>
    <string name="Address">Enter Address</string>
    <string name="Gender">Gender</string>
    <string name="Company">Enter Company</string>
    <string name="Contact_number">Enter Contact Number</string>
    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter one time password sent on\n91+1234567890</string>
    <string name="VehicleName">Enter Vehicle Name</string>
    <string name="VehicleNumber">Enter Vehicle Number</string>
    <string name="VehicleType">Vehicle Type</string>
    <string name="FuelType">Fuel Type</string>
    <string name="VehicleCapacity">Vehicle Capacity</string>
    <string name="phone_verification_text">Phone Verification</string>
    <string name="phone_verification_desc">We need to verify your phone number\nbefore getting started.</string>
    <string name="send_the_code">Send the code</string>
    <string name="verify_code">Verify Code</string>
    <string name="edit_phone_number">Edit</string>
    <string name="send_again">Send Again</string>
    <string name="company_login">Company\nLogin</string>
    <string name="company_register">Company\nRegister</string>
    <string name="state">Enter State</string>
    <string name="city">Enter City</string>
    <string name="company_details">Company\nDetails</string>
    <string name="company_verification">Company Verification</string>
    <string name="phone_email_verification">We need to verify your email/phone
        number\nbefore getting started.</string>
    <string name="enter_phone_email">Email/Phone number</string>
    <string name="enter_one_time_password">Enter One Time Password</string>
    <string name="todo">TODO</string>
    <string name="companyid">companyid</string>
    <string name="rider_home">RIDER HOME</string>
    <string name="todotry">TODO</string>
    <string name="date">date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">time</string>
    <string name="start">Start</string>
    <string name="book_a_ride">Book a Ride</string>
    <string name="find_ride">Find Ride</string>
    <string name="ride_completed" />
    <string name="ride_ncompleted">ride\ncompleted</string>
    <string name="home">Home</string>
    <string name="todo1">TODO</string>
    <string name="todo12">TODO</string>
    <string name="ldrp_itr_2">LDRP ITR-2</string>
    <string name="ldrp_itr_3">ldmmvvj;en vclekmcoqmqc kv \njer vlrv ler fcleqrv kear v</string>
    <string name="qualification">Qualification</string>
    <string name="designation">Designation</string>
    <string name="experience">Experience</string>
    <string name="enter_email1">Enter Email</string>
    <string name="department">Department</string>
</resources>